Bug 68935 - Merge with Wikilog@84432

--- a/extensions/Wikilog/RELEASE-NOTES
+++ b/extensions/Wikilog/RELEASE-NOTES
@@ -4,6 +4,28 @@
 
 === General notes ===
 
+MediaWiki requirement raised to 1.16.0 and later.  MediaWiki 1.15 and earlier
+are no longer supported in this release.
+
+=== New configuration options ===
+
+=== New features ===
+
+* Article and comment timestamps are now displayed in the wiki timezone
+  (as defined by $wgLocaltimezone).
+
+=== Bug fixes ===
+
+* (mw:bug 27904) Fixed method signature compatibility with Mw1.16 for
+  WikilogParserCache.
+
+
+== Wikilog 1.1.0 ==
+
+Aug 8, 2010
+
+=== General notes ===
+
 Database schema changed since 1.0.x, a database update is required.
 You should backup your data and run maintenance/update.php to upgrade.
 
@@ -43,6 +65,9 @@ your case.
 * Comment syndication feeds are now available. Currently, there is one feed
   per wikilog article, that lists comments made to that article. In the
   future, feeds per thread, per wikilog and global may be provided.
+* Added support for MediaWiki 1.16 Vector skin.
+* Special:Wikilog now allows querying by namespace, with the "Namespace:*"
+  syntax.
 
 === Bug fixes ===
 
@@ -50,12 +75,12 @@ your case.
   wikilog-summary-header/footer and others, with proper PLURAL support.
 * (wl:issue 1) Improve header/footer item messages.
 * (wl:issue 5) Usability improvement in wikilog actions tab.
-* Disabled minimum feed cache age check ($wgFeedCacheTimeout) in
-  WikilogFeed, since this causes the wrong Last-modified header to be
-  output. Waiting for a fix for the same problem found in ChangesFeed.
+* (mw:bug 21916) Fix minimum feed cache age check in WikilogFeed.
   Noted by Vitaliy Filippov.
 * Don't croak in Wikilog::getWikilogInfo() if $title is NULL. Patch by
   Vitaliy Filippov.
+* Improved consistency of edit links with the rest of MediaWiki.
+* (wl:issue 7) Handle the new Vector skin hooks (Mw 1.16).
 
 
 == Wikilog 1.0.1 ==
